[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "aiobt"
version = "0.1.0"
description = "Pure Python asyncio BitTorrent client library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Jason Fried", email = "me@jasonfried.info" },
]
keywords = ["asyncio", "bittorrent", "torrent", "p2p", "peer-to-peer"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "black",
    "pyrefly",
    "later",
    "cython>=3",
    "setuptools>=69",
]

[project.urls]
Homepage = "https://github.com/fried/aiobt"
Repository = "https://github.com/fried/aiobt"
Issues = "https://github.com/fried/aiobt/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aiobt = ["py.typed"]

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.pyrefly]
python_version = "3.14"
source = ["src"]
