[build-system]
requires = ["meson-python>=0.17", "cython>=3"]
build-backend = "mesonpy"

[project]
name = "aiobt"
version = "26.6.1"
description = "Pure Python asyncio BitTorrent client library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
authors = [
    { name = "Jason Fried", email = "me@jasonfried.info" },
]
keywords = ["asyncio", "bittorrent", "torrent", "p2p", "peer-to-peer"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff",
    "pyrefly",
    "later",
    "cython>=3",
]

[project.urls]
Homepage = "https://github.com/fried/aiobt"
Repository = "https://github.com/fried/aiobt"
Issues = "https://github.com/fried/aiobt/issues"

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.format]
docstring-code-format = true

[tool.pyrefly]
python_version = "3.14"
source = ["src"]
